# mneme

./: .agentignore  .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  project_plan.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py  sitemap.xml
.claude/: settings.local.json
.github/workflows/: docs.yml  tests.yml
API_DESIGN/: index.html
BETSE_ANALYSIS_REPORT/: index.html
DATA_ACQUISITION_PLAN/: index.html
DATA_PIPELINE/: index.html
DEVELOPMENT_SETUP/: index.html
FUTURE_IDEAS/: index.html
PROJECT_STRUCTURE/: index.html
REPO_AUDIT_2025-08-18/: index.html
TESTING_STRATEGY/: index.html
api/: index.html
api/analysis/pipeline/: index.html
api/analysis/visualization/: index.html
api/core/attractors/: index.html
api/core/classify/: index.html
api/core/embedding/: index.html
api/core/field_theory/: index.html
api/core/lyapunov/: index.html
api/core/surrogates/: index.html
api/core/topology/: index.html
api/data/betse_loader/: index.html
api/data/generators/: index.html
api/data/preprocessors/: index.html
api/models/autoencoders/: index.html
api/models/symbolic/: index.html
code_of_conduct/: index.html
config/: default.yaml  experiment_example.yaml
contributing/: index.html
course/: index.html
course/01_first_principles/: index.html
course/02_environment_setup/: index.html
course/03_cli_quickstart/: index.html
course/04_pipeline_anatomy/: index.html
course/05_field_reconstruction/: index.html
course/06_topology_tda/: index.html
course/07_attractor_detection/: index.html
course/08_visualization_reporting/: index.html
course/09_experiments_reproducibility/: index.html
course/10_performance_monitoring/: index.html
course/11_symbolic_regression/: index.html
data/raw/physionet/: mitdb_100.npz  mitdb_100_hrv_lyapunov.npz  mitdb_100_lyapunov.npz  multi_dataset_results.npz
docs/: API_DESIGN.md  BETSE_ANALYSIS_REPORT.md  DATA_ACQUISITION_PLAN.md  DATA_PIPELINE.md  DEVELOPMENT_SETUP.md  FUTURE_IDEAS.md  PROJECT_STRUCTURE.md  REPO_AUDIT_2025-08-18.md  TESTING_STRATEGY.md  code_of_conduct.md  contributing.md  index.md  mneme_project_plan_v1_original.md
docs/api/: index.md
docs/api/analysis/: pipeline.md  visualization.md
docs/api/core/: attractors.md  classify.md  embedding.md  field_theory.md  lyapunov.md  surrogates.md  topology.md
docs/api/data/: betse_loader.md  generators.md  preprocessors.md
docs/api/models/: autoencoders.md  symbolic.md
docs/course/: 01_first_principles.md  02_environment_setup.md  03_cli_quickstart.md  04_pipeline_anatomy.md  05_field_reconstruction.md  06_topology_tda.md  07_attractor_detection.md  08_visualization_reporting.md  09_experiments_reproducibility.md  10_performance_monitoring.md  11_symbolic_regression.md  README.md
docs/superpowers/plans/: 2026-05-16-tier0-scientific-core.md
docs/superpowers/specs/: 2026-05-16-tier0-scientific-core-design.md
mneme_project_plan_v1_original/: index.html
notebooks/: 01_synthetic_data_exploration.ipynb
results/: analysis_results.hdf5
results_attr/: analysis_results.hdf5
results_cli/: analysis_results.hdf5
scripts/: analyze_betse.py  analyze_physionet.py  deep_analysis.py  setup_dev_env.sh  validate_installation.py
search/: search_index.json
src/mneme/: __init__.py  cli.py  types.py
src/mneme/analysis/: __init__.py  features.py  metrics.py  pipeline.py  results.py  results_generator.py  visualization.py
src/mneme/core/: __init__.py  attractors.py  classify.py  embedding.py  field_theory.py  lyapunov.py  surrogates.py  topology.py
src/mneme/data/: __init__.py  betse_loader.py  bioelectric.py  generators.py  loaders.py  parallel.py  preprocessors.py  quality.py  validation.py
src/mneme/models/: __init__.py  autoencoders.py  symbolic.py
src/mneme/utils/: __init__.py  config.py  io.py  logging.py  monitoring.py
superpowers/plans/2026-05-16-tier0-scientific-core/: index.html
superpowers/specs/2026-05-16-tier0-scientific-core-design/: index.html
tests/: conftest.py  test_attractors.py  test_betse_loader.py  test_classify.py  test_cli.py  test_config.py  test_core_exports.py  test_embedding.py  test_field_theory.py  test_generators.py  test_import.py  test_io.py  test_loaders.py  test_logging.py  test_lyapunov.py  test_metrics.py  test_models.py  test_pipeline.py  test_preprocessors.py  test_results_manager.py  test_scripts_smoke.py  test_surrogates.py  test_topology.py
