[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme"
version = "0.1.0"
description = "Detecting field-like memory structures in biological systems"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Mneme Development Team", email = "mneme@example.com"},
]
maintainers = [
    {name = "Mneme Development Team", email = "mneme@example.com"},
]
keywords = [
    "biology",
    "topology",
    "field-theory",
    "machine-learning",
    "regeneration",
    "bioelectricity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "torch>=2.0.0",
    "h5py>=3.0.0",
    "scikit-image>=0.20.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/bshepp/mneme"
Documentation = "https://bshepp.github.io/mneme/"
Repository = "https://github.com/bshepp/mneme"
Issues = "https://github.com/bshepp/mneme/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "pytest-mock>=3.6.0",
    "black>=21.6b0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
    "mypy>=0.910",
    "types-PyYAML>=6.0.12",
    "pre-commit>=2.13.0",
]
notebooks = [
    "ipython>=7.25.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
]
gpu = [
    "cupy>=9.0.0",
]
pysr = [
    "pysr>=0.19.4,<0.20.0",
    "scikit-learn>=1.3,<1.5",
    "juliacall>=0.9,<1.0",
]
tda = [
    "gudhi>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
mneme = "mneme.cli:main"
mneme-generate = "mneme.cli:main"
mneme-pipeline = "mneme.cli:main"
mneme-visualize = "mneme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
    "performance: marks performance tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "gudhi.*",
    "pysr.*",
    "torch.*",
    "h5py.*",
    "plotly.*",
    "seaborn.*",
    "skimage.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/mneme"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
fail_under = 35
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]